--- a/src/styles/driverAutoSuggest.css
+++ b/src/styles/driverAutoSuggest.css
@@ -1,14 +1,12 @@
 
 .react-autosuggest__container {
     position: relative;
-    flex-grow: 0;
-    max-width: 83.333333%;
-    flex-basis: 83.333333%;
-    margin: 6px;
+    margin-top: 6px;
+    width:100%;
   }
   
   .react-autosuggest__input {
-    width:220px;
+    width:100%;
     height: 40px;
     padding: 10px 20px;
     display: block;
@@ -28,7 +26,7 @@
     border-bottom-left-radius: 0;
     border-bottom-right-radius: 0;
   }
-  
+ 
   .react-autosuggest__suggestions-container {
     display: none;
   }
@@ -37,7 +35,7 @@
     display: block;
     position: relative;
     margin:auto;
-    width:220px;
+    width:100%;
     border: 1px solid #aaa;
     background-color: #fff;
     font-family: Helvetica, sans-serif;
