--- a/src/styles/genericStyles.css
+++ b/src/styles/genericStyles.css
@@ -10,6 +10,9 @@
     margin-bottom: 5px;
   }
 }
+.invalid-input {
+  background-color: #ffdddd;
+}
 
 @media only screen and (min-width: 699px) {
 	.list-buttons {
