--- a/src/styles/layout.css
+++ b/src/styles/layout.css
@@ -34,8 +34,14 @@
     justify-content: flex-end;
 }
 
+    .top-header > div {
+        display: flex;
+        flex-basis: 10%;
+        justify-content: flex-end;
+    }
+
     .top-header .top-header-text {
-        flex-basis: 50%;
+        flex-basis: 80%;
     }
 
 
