--- a/src/styles/navbar.css
+++ b/src/styles/navbar.css
@@ -13,9 +13,8 @@
 .navBar-button {
   flex: 1;
   height: 100%;
-  background-color: #0A2239;
+  background-color: #0a2239;
   margin: 1px;
-  margin-top: 13 px;
   flex-direction: column;
   align-items: center;
 }
@@ -35,9 +34,8 @@ a.navBar-button:hover {
   justify-content: center;
   align-items: center;
   height: 100%;
-  margin-top: 5px;
 }
 
 button:focus {
-  outline:0!important;
+  outline: 0 !important;
 }
