--- a/src/styles/MenuHeader.css
+++ b/src/styles/MenuHeader.css
@@ -19,9 +19,28 @@ button:focus {
 
 .profile {
   height: 100%;
+  width: 100%;
 }
 
 @media only screen and (max-width: 713px) {
   .secondary-header {
   }
+}
+
+.menu-thumbnail {
+  width: 49px;
+  height: 10%;
+  margin: 0 auto;
+  text-align: center;
+  display: block;
+  border-radius: 50%;
+}
+.menu-list-header .header-button .role {
+  position: absolute;
+  z-index: 0;
+  width: auto;
+  height: 22px;
+  right: -6px;
+  bottom: -6px;
+  background-color: mintcream;
 }
