--- a/src/styles/genericStyles.css
+++ b/src/styles/genericStyles.css
@@ -81,8 +81,18 @@ button:focus {
   color: #e8e9eb;
 }
 .generic-button {
-  margin: 3px !important;
-  width: 100px;
+  border: 1px solid #666;
+  padding: 2px;
+  box-shadow: 1px 1px #888888;
+  background-color: #fff;
+/*  height: 36px;
+  width: 36px; */
+  border-radius: 30%;
+  margin-right: 5px;
+  margin-left: 5px;
+  display:flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .rides-delete-button {
