--- a/src/styles/routeSelection.css
+++ b/src/styles/routeSelection.css
@@ -1,6 +1,7 @@
 .location-selection-container{
     width: 100vw;
     background-color: #f8f9fa !important;
+
     }
     .location-selection-container-extended{
         width: 100vw;
@@ -40,3 +41,20 @@
             height:100%;
         }
 
+.location-input-container{
+    margin: 5px;
+    border: 1px solid#ccc;
+    box-sizing: border-box;
+    background-color: white;
+    padding-left: 10px;
+}
+
+.empty{
+    color:#aaa;
+}
+
+.location-input{
+    border: 0;
+    margin-left: 15px;
+    width:100%;
+}
