existing route is displayed in routeMap, existing route point edditiong, funcitonal andress input field in LocationSelection component

--- a/src/styles/routeSelection.css
+++ b/src/styles/routeSelection.css
@@ -19,6 +19,8 @@
 }
         .algolia-input {
             margin: 5px;
+            width: 100%;
+            z-index:9;
           }
           .direction-label-container{
             position:relative;
