Route point removing, validation for start/destination point of route to be office, minor bug fixes

--- a/src/styles/genericStyles.css
+++ b/src/styles/genericStyles.css
@@ -95,6 +95,10 @@ button:focus {
   align-items: center;
 }
 
+.generic-button:not(.disabled):hover {
+  background-color: #aaa;
+}
+
 .rides-delete-button {
   background-color: #f74428!important;
   color: white!important;
