--- a/src/styles/navbar.css
+++ b/src/styles/navbar.css
@@ -3,7 +3,7 @@
   position: fixed;
   bottom: 0;
   width: 100%;
-  height: 6%;
+  height: 57px;
   display: flex;
   background-color: white;
   align-items: center;
