Different icons for different route point types. Route search with office tp office trip case. Route/ride search implemented. Route creation and search bug fixes. Tooltip displayed when office is not start/destination point of route. Suggested driver list implemented. Minor css changes

--- a/src/styles/genericStyles.css
+++ b/src/styles/genericStyles.css
@@ -83,18 +83,20 @@ button:focus {
     color: #e8e9eb;
 }
 
-.generic-btn-color {
+.generic-colored-btn {
     background-color: #0A2239 !important;
     color: #e8e9eb !important;
+    margin-left: 2px!important;
+    margin-right: 2px!important;
+    padding-left: 10px!important;
+    padding-right: 10px!important;
 }
 
-.generic-btn-color.disabled {
-    background-color: #0a2239!important;
-    color: white!important;
+.generic-colored-btn.disabled {
     opacity: 0.5;
 }
 
-.generic-btn-color:hover {
+.generic-colored-btn:hover {
     background-color: #10365a!important;
 }
 
