--- a/src/styles/driversRidesList.css
+++ b/src/styles/driversRidesList.css
@@ -16,6 +16,27 @@ button:focus {
     max-height: 70%;
 }
 
+.driver-list-button-container {
+    display: flex;
+    justify-content: center;
+    height: 5%;
+}
+
+.driver-list-button {
+    display: flex;
+    justify-content: center;
+    background-color: #f5f5f5 !important;
+    color: rgba(0, 0, 0, 0.54);
+    font-size: 0.875rem;
+    box-sizing: border-box;
+    list-style: none;
+    line-height: 48px;
+    font-family: "Roboto", "Helvetica", "Arial", sans-serif;
+    font-weight: 500;
+    padding-left: 16px;
+    padding-right: 16px;
+}
+
 .suggestion-modal-list {
     overflow-y: scroll;
 }
