--- a/src/styles/driversRidesList.css
+++ b/src/styles/driversRidesList.css
@@ -48,13 +48,15 @@ button:focus {
 }
 
 .drivers-list-root {
-    max-height: 75vh;
+    max-height: 30vh;
     overflow-y: scroll;
     background-color: #f5f5f5;
 }
 
 .drivers-list-header {
     text-align: center;
+    background-color: #f5f5f5 !important;
+    max-height: 5% !important;
 }
 
 .drivers-list {
