--- a/src/styles/navbar.css
+++ b/src/styles/navbar.css
@@ -3,7 +3,7 @@
     position: fixed;
     bottom: 0;
     width: 100%;
-    height: 6%;
+    max-height: 7.5%;
     display: flex;
     background-color: white;
     align-items: center;
@@ -39,4 +39,14 @@ a.navBar-button:hover {
 
 button:focus {
     outline: 0 !important;
+}
+
+.nav-tabs {
+    width: 50% !important;
+}
+
+.nav-tabs-container {
+    display: flex;
+    justify-content: center;
+    background-color: #0A2239 !important;
 }
