--- a/src/styles/genericStyles.css
+++ b/src/styles/genericStyles.css
@@ -199,6 +199,8 @@ th {
 
 .generic-card {
     margin-top: 10px;
+    margin-right: 10px;
+    margin-left: 10px;
     box-shadow: 1px 1px 1px 1px #463876, 1px 1px 1px 1px rgba(0, 0, 0, 0.14), 1px 2px 1px 2px rgba(0, 0, 0, 0.12);
 }
 
