--- a/src/styles/driversRidesList.css
+++ b/src/styles/driversRidesList.css
@@ -161,3 +161,19 @@ div.passengers-card {
     padding-left: 16px;
     padding-right: 16px;
 }
+
+.delete-ride-container {
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: flex-end;
+}
+
+.select-rides-container {
+    margin: 5px;
+}
+
+.select-ride {
+    margin: 3px;
+}
