--- a/src/styles/newRideForm.css
+++ b/src/styles/newRideForm.css
@@ -1,64 +1,92 @@
 div.container {
-  display: flex;
-  flex-wrap: wrap;
-  flex: 0 0 100%;
-  padding: none;
-  margin: none, none;
-  margin-top: 20px;
-  margin-bottom: none;
-  justify-content: space-around;
+    display: flex;
+    flex-wrap: wrap;
+    flex: 0 0 100%;
+    padding: none;
+    margin: none, none;
+    margin-top: 20px;
+    margin-bottom: none;
+    justify-content: space-around;
 }
 
 button:focus {
-  outline:0!important;
+    outline: 0!important;
 }
 
 div.container form .form-group {
-  flex-wrap: wrap;
-  flex: 0 0 100%;
+    flex-wrap: wrap;
+    flex: 0 0 100%;
 }
 
 form {
-  background-color: transparent;
-  border-radius:  5%;
-  padding: 5%;
+    background-color: transparent;
+    border-radius: 5%;
+    padding: 5%;
 }
+
 div.react-datetime-picker__button {
-  display: relative;
+    display: relative;
 }
+
 div.react-datetime-picker {
-  display: flex;
-  flex-wrap: wrap;
+    display: flex;
+    flex-wrap: wrap;
 }
+
 div.react-datetime-picker .react-datetime-picker__button {
-  flex: 0 0 100%;
-  background-color: antiquewhite;
+    flex: 0 0 100%;
+    background-color: antiquewhite;
 }
+
 div.react-datetime-picker input {
-  flex: 1;
-  color: black;
+    flex: 1;
+    color: black;
 }
 
 .calendar {
-  display: inline;
+    display: inline;
 }
 
 .scheduler-container {
-  padding-left: 20px;
-  padding-right: 20px;
+    display: flex;
+    justify-content: center;
+    padding-left: 20px;
+    padding-right: 20px;
 }
 
 .create-rides-button {
-  text-align: right;
+    text-align: right;
 }
 
 .create-rides-button button {
-  margin-bottom: 15px;
-  margin-right: 15px;
-  color: #f96f59;
-  border-color: #f62f0f;
+    margin-bottom: 15px;
+    margin-right: 15px;
+    color: #f96f59;
+    border-color: #f62f0f;
 }
 
 .create-rides-button button:hover {
-  background-color: white;
+    background-color: white;
+}
+
+.scheduler-button-container {
+    width: 100%;
+    margin-bottom: 10px;
+    display: flex;
+    justify-content: space-between;
+}
+
+.navigation-button-container {
+    display: flex;
+}
+
+.create-rides-button-container {
+    margin-bottom: 10px !important;
+    display: flex;
+    justify-content: flex-end;
+}
+
+.ride-note-container {
+    display: flex;
+    justify-content: center;
 }
