--- a/src/styles/genericStyles.css
+++ b/src/styles/genericStyles.css
@@ -249,3 +249,22 @@ th {
     display: flex;
     justify-content: center;
 }
+
+.dialog-close {
+    position: absolute;
+    right: 0;
+    z-index: 10;
+}
+
+.dialog-content {
+    margin-top: 20px;
+}
+
+.dialog-body {
+    max-width: 95% !important;
+}
+
+.list-container {
+    display: flex;
+    justify-content: center;
+}
