--- a/src/styles/driversRidesList.css
+++ b/src/styles/driversRidesList.css
@@ -47,9 +47,8 @@ button:focus {
     z-index: 10;
 }
 
-.drivers-list-root {
+.driver-list-root {
     max-height: 30vh;
-    overflow-y: scroll;
     background-color: #f5f5f5;
 }
 
@@ -150,4 +149,15 @@ div.rides-card {
 .ride-request-note {
     padding-left: 16px;
     padding-right: 16px;
+}
+
+.route-filter-tabs-container {
+    display: flex;
+    justify-content: center;
+    background-color: #0A2239 !important;
+}
+
+.route-filter-tab {
+    width: 33.3%;
+    height: 100%
 }
