--- a/src/styles/genericStyles.css
+++ b/src/styles/genericStyles.css
@@ -98,7 +98,7 @@ button:focus {
     cursor: pointer;
 }
 
-.generic-colored-btn.disabled {
+.disabled {
     opacity: 0.5;
 }
 
@@ -245,15 +245,21 @@ th {
     justify-content: center;
 }
 
-.dialog-close {
+.dialog-close-white {
     position: absolute;
     right: 0;
     z-index: 10;
-    background-color: #e8e9eb;
+    color: #fff;
+}
+
+.dialog-close-black {
+    position: absolute;
+    right: 0;
+    z-index: 10;
 }
 
 .dialog-content {
-    padding: 12px !important;
+    padding: 0px !important;
     background-color: #e8e9eb;
 }
 
@@ -275,8 +281,9 @@ th {
     padding-bottom: 10px;
 }
 
-.request-card-content {
+.request-card {
     padding: 16px !important;
+    margin: 10px;
 }
 
 .accept {
@@ -301,4 +308,25 @@ th {
 
 .pending-request-button {
     justify-content: flex-end;
+}
+
+.driver-list-header {
+    color: rgba(0, 0, 0, 0.54);
+    font-size: 0.875rem;
+    box-sizing: border-box;
+    list-style: none;
+    line-height: 48px;
+    font-family: "Roboto", "Helvetica", "Arial", sans-serif;
+    font-weight: 500;
+}
+
+.filter-body {
+    margin-left: 10px;
+    margin-right: 10px;
+    margin-bottom: 10px;
+}
+
+.calendar-container {
+    margin-top: 10px !important;
+    margin-bottom: 10px !important;
 }
