--- a/src/styles/driversRidesList.css
+++ b/src/styles/driversRidesList.css
@@ -12,11 +12,11 @@ button:focus {
 }
 
 .drivers-suggestion-modal {
-    margin-top: 15px;
+    margin-top: 20px;
 }
 
 .drivers-suggestion-list {
-    overflow: scroll;
+    overflow-y: scroll;
     max-height: 70vh;
 }
 
@@ -58,9 +58,14 @@ button:focus {
     max-height: 5% !important;
 }
 
-.drivers-list {
+.driver-list-item {
     align-items: flex-start;
     vertical-align: middle;
+}
+
+.suggested-driver-list{
+overflow-y:scroll;
+height: 20vh;
 }
 
 .active-rides-card-container {
