--- a/src/styles/testmap.css
+++ b/src/styles/testmap.css
@@ -1,7 +1,7 @@
 #map {
     position: absolute;
     width: 100%;
-    height: 91%;;
+    height: 90vh;
     overflow-y: hidden;
     border: none !important;
 }
